[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/font_16pt.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/AudioManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI.gd" type="Script" id=3]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GameContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="GameContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameContainer/VBoxContainer"]
margin_right = 618.0
margin_bottom = 89.0
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameContainer/VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 89.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3

[node name="Clock" type="Label" parent="GameContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 32.0
rect_min_size = Vector2( 140, 0 )
text = "Time: xxx"

[node name="Devils" type="Label" parent="GameContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 68.0
rect_min_size = Vector2( 140, 0 )
text = "Demons: xxx"

[node name="VBoxContainer1" type="VBoxContainer" parent="GameContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 496.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Rules" type="Label" parent="GameContainer/VBoxContainer/HBoxContainer/VBoxContainer1"]
margin_right = 336.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "Mind your Ps are Qs, and vowels are shifted, and words are backwards, and vowels are all Es, and words are in alphabetical order, and Ds are Bs
"
align = 1
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="GameContainer/VBoxContainer/HBoxContainer"]
margin_left = 506.0
margin_right = 618.0
margin_bottom = 89.0
size_flags_horizontal = 3

[node name="AudioManager" parent="GameContainer/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
margin_right = 112.0
margin_bottom = 32.0

[node name="Score" type="Label" parent="GameContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 112.0
margin_bottom = 68.0
text = "Score: xxx"

[node name="Fragments" type="HBoxContainer" parent="GameContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 618.0
margin_bottom = 334.0
size_flags_vertical = 3

[node name="Prefixes" type="VBoxContainer" parent="GameContainer/VBoxContainer/Fragments"]
margin_right = 112.0
margin_bottom = 241.0
alignment = 1

[node name="Label" type="Label" parent="GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 50.0
margin_right = 112.0
margin_bottom = 82.0
text = "test content"

[node name="Label2" type="Label" parent="GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 86.0
margin_right = 112.0
margin_bottom = 118.0
text = "test content"

[node name="Label3" type="Label" parent="GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 122.0
margin_right = 112.0
margin_bottom = 154.0
text = "test content"

[node name="Label4" type="Label" parent="GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 158.0
margin_right = 112.0
margin_bottom = 190.0
text = "test content"

[node name="Spacer" type="HBoxContainer" parent="GameContainer/VBoxContainer/Fragments"]
margin_left = 116.0
margin_right = 502.0
margin_bottom = 241.0
size_flags_horizontal = 3

[node name="Suffixes" type="VBoxContainer" parent="GameContainer/VBoxContainer/Fragments"]
margin_left = 506.0
margin_right = 618.0
margin_bottom = 241.0
alignment = 1

[node name="Label" type="Label" parent="GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 50.0
margin_right = 112.0
margin_bottom = 82.0
text = "test content"

[node name="Label2" type="Label" parent="GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 86.0
margin_right = 112.0
margin_bottom = 118.0
text = "test content"

[node name="Label3" type="Label" parent="GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 122.0
margin_right = 112.0
margin_bottom = 154.0
text = "test content"

[node name="Label4" type="Label" parent="GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 158.0
margin_right = 112.0
margin_bottom = 190.0
text = "test content"

[node name="Typed" type="Label" parent="GameContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 618.0
margin_bottom = 370.0
align = 1

[node name="StartContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="StartContainer"]
margin_left = 277.0
margin_top = 152.0
margin_right = 391.0
margin_bottom = 267.0
custom_constants/separation = 20

[node name="GameOver" type="Label" parent="StartContainer/VBoxContainer"]
margin_right = 114.0
margin_bottom = 63.0
text = "Mind Your
Ps are Qs"
align = 1

[node name="StartButton" type="Button" parent="StartContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 114.0
margin_bottom = 115.0
text = "Start Game"

[node name="ChooserContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CurseChooser" type="VBoxContainer" parent="ChooserContainer"]
margin_left = 259.0
margin_top = 123.0
margin_right = 408.0
margin_bottom = 296.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="ChooserContainer/CurseChooser"]
margin_right = 149.0
margin_bottom = 32.0
text = "Choose a Curse"
align = 1

[node name="Choice" type="Button" parent="ChooserContainer/CurseChooser"]
margin_top = 47.0
margin_right = 149.0
margin_bottom = 79.0
text = "Ps are Qs"

[node name="Choice2" type="Button" parent="ChooserContainer/CurseChooser"]
margin_top = 94.0
margin_right = 149.0
margin_bottom = 126.0
text = "Ps are Qs"

[node name="Choice3" type="Button" parent="ChooserContainer/CurseChooser"]
margin_top = 141.0
margin_right = 149.0
margin_bottom = 173.0
text = "Ps are Qs"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="StartContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ChooserContainer/CurseChooser/Choice" to="." method="_on_Choice_pressed"]
[connection signal="pressed" from="ChooserContainer/CurseChooser/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="ChooserContainer/CurseChooser/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
